# rose-array

./: CMakeLists.txt  LICENSE-MIT  README.md  conanfile.py
include/rose/: array.hpp
test/: arr_test.cpp  arr_vec_test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
